added TickTacToe class

--- a/tick-tack-toe-console/CMakeLists.txt
+++ b/tick-tack-toe-console/CMakeLists.txt
@@ -8,4 +8,6 @@ add_executable(tick_tack_toe_console
         Player.cpp
         Player.h
         Board.cpp
-        Board.h)
+        Board.h
+        TicTacToe.cpp
+        TicTacToe.h)
